---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%myPrg = type {}
%myFb = type {}

@myPrg_instance = global %myPrg zeroinitializer, !dbg !0
@__myFb__init = unnamed_addr constant %myFb zeroinitializer, !dbg !5

define i32 @myFunc() !dbg !10 {
entry:
  %myFunc = alloca i32, align 4, !dbg !13
  call void @llvm.dbg.declare(metadata i32* %myFunc, metadata !14, metadata !DIExpression()), !dbg !18
  store i32 0, i32* %myFunc, align 4, !dbg !13
  %myFunc_ret = load i32, i32* %myFunc, align 4, !dbg !13
  ret i32 %myFunc_ret, !dbg !13
}

define void @myPrg(%myPrg* %0) !dbg !19 {
entry:
  call void @llvm.dbg.declare(metadata %myPrg* %0, metadata !20, metadata !DIExpression()), !dbg !21
  ret void, !dbg !21
}

define void @myFb(%myFb* %0) !dbg !22 {
entry:
  call void @llvm.dbg.declare(metadata %myFb* %0, metadata !23, metadata !DIExpression()), !dbg !24
  ret void, !dbg !24
}

; Function Attrs: nofree nosync nounwind readnone speculatable willreturn
declare void @llvm.dbg.declare(metadata, metadata, metadata) #0

attributes #0 = { nofree nosync nounwind readnone speculatable willreturn }

!llvm.dbg.cu = !{!8}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "myPrg", scope: !2, file: !2, line: 4, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "main", directory: "")
!3 = !DICompositeType(tag: DW_TAG_structure_type, name: "myPrg", scope: !2, file: !2, line: 4, align: 64, flags: DIFlagPublic, elements: !4, identifier: "myPrg")
!4 = !{}
!5 = !DIGlobalVariableExpression(var: !6, expr: !DIExpression())
!6 = distinct !DIGlobalVariable(name: "__myFb__init", scope: !2, file: !2, line: 6, type: !7, isLocal: false, isDefinition: true)
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "myFb", scope: !2, file: !2, line: 6, align: 64, flags: DIFlagPublic, elements: !4, identifier: "myFb")
!8 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, enums: !4, globals: !9, splitDebugInlining: false)
!9 = !{!0, !5}
!10 = distinct !DISubprogram(name: "myFunc", linkageName: "myFunc", scope: !2, file: !2, line: 2, type: !11, scopeLine: 3, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !8, retainedNodes: !4)
!11 = !DISubroutineType(flags: DIFlagPublic, types: !12)
!12 = !{null}
!13 = !DILocation(line: 3, column: 8, scope: !10)
!14 = !DILocalVariable(name: "myFunc", scope: !10, file: !2, line: 2, type: !15, align: 32)
!15 = !DIDerivedType(tag: DW_TAG_typedef, name: "dint", scope: !16, file: !16, line: 10, baseType: !17, align: 32)
!16 = !DIFile(filename: "<internal>", directory: "")
!17 = !DIBasicType(name: "int32", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!18 = !DILocation(line: 2, column: 17, scope: !10)
!19 = distinct !DISubprogram(name: "myPrg", linkageName: "myPrg", scope: !2, file: !2, line: 4, type: !11, scopeLine: 5, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !8, retainedNodes: !4)
!20 = !DILocalVariable(name: "myPrg", scope: !19, file: !2, line: 4, type: !3)
!21 = !DILocation(line: 5, column: 8, scope: !19)
!22 = distinct !DISubprogram(name: "myFb", linkageName: "myFb", scope: !2, file: !2, line: 6, type: !11, scopeLine: 7, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !8, retainedNodes: !4)
!23 = !DILocalVariable(name: "myFb", scope: !22, file: !2, line: 6, type: !7)
!24 = !DILocation(line: 7, column: 8, scope: !22)

